Run PMD